# fastapi-vite

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yml  Makefile  README.md  main.py  mypy.ini  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  setup.cfg  tailwind.config.js  tsconfig.json  vite.config.ts
assets/javascript/: main.tsx
assets/javascript/components/: App.tsx
assets/javascript/components/pages/: BasicLanding.tsx
assets/templates/: index.html
fastapi_vite/: __init__.py  config.py  loader.py  runner.py
scripts/: format-source-code.sh
src/fastapi_vite/: __init__.py  config.py  loader.py  runner.py
src/fastapi_vite/templates/: index.html
tests/: test.py
tests/fastapi_vite/: test_fastapi_vite.py
