[tool.poetry]
name = "fastapi-vite"
version = "0.2.1"
description = "Integration utilities for FastAPI and ViteJS."
authors = ["Cody Fincher <cody.fincher@gmail.com>"]
keywords = ["fastapi","starlette","vite"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/cofin/fastapi-vite"
repository = "https://github.com/cofin/fastapi-vite"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "*"
Jinja2 = "*"
starlette = "*"
python-dotenv = "^0.17.1"
aiofiles = "^0.7.0"


[tool.poetry.dev-dependencies]
pytest-cov = "^2.10.1"
pytest = "^6.2.3"
autoflake = "^1.4"
flake8 = "^3.8.4"
mypy = "^0.790"
isort = "^5.0"
pre-commit = "^2.8.2"
black = "^21.5b2"
uvicorn = "^0.14.0"


[tool.poetry.extras]
orjson = ["orjson"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
