[tool.poetry]
name = "fastapi_vite"
version = "0.3.1"
description = "Integration utilities for FastAPI and ViteJS."
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3 :: Only",
]
authors = ["Cody Fincher <cody.fincher@gmail.com>"]
keywords = ["fastapi","starlette","vite"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/cofin/fastapi-vite"
repository = "https://github.com/cofin/fastapi-vite"

[tool.poetry.dependencies]
python = ">=3.8,<4"
fastapi = "*"
Jinja2 = "*"
typer = "*"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}

[tool.poetry.scripts]
fastapi-vite = "fastapi_vite.cli:main"


[tool.poetry.dev-dependencies]
pytest-cov = ">=2.10.1"
pytest = ">=6.2.3"
autoflake = ">=1.4"
flake8 = ">=3.8.4"
mypy = ">=0.790"
isort = ">=5.0"
pre-commit = ">=2.8.2"
black = ">=21.5b2"
uvicorn = ">=0.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
