[tool.poetry]
name = "fastapi_vite"
version = "0.3.2"
description = "Integration utilities for FastAPI and ViteJS."
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3 :: Only",
]
authors = ["Cody Fincher <cody.fincher@gmail.com>"]
keywords = ["fastapi","starlette","vite"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/cofin/fastapi-vite"
repository = "https://github.com/cofin/fastapi-vite"
packages = [
    { include = "fastapi_vite", from = "src/"}
]
[tool.poetry.dependencies]
python = ">=3.8,<4"
fastapi = "*"
Jinja2 = "*"
pydantic = "*"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^0.20.0"
pytest = ">=6.2.4"
pytest-cov = ">=3.0.0"
pytest-asyncio = ">=0.16.0"
pre-commit = ">=2.17.0"
bump2version = ">=1.0.1"
isort = ">=5.10.1"
flake8 = ">=4.0.1"
pylint = ">=2.12.2"
black = ">=21.12b0"
autoflake = ">=1.4"
pip-licenses = ">=3.5.3"
wemake-python-styleguide = ">=0.16.0"
uvicorn = "*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
